# transformer-from-scratch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  LICENSE  Makefile  README.md  config.py  data.py  model.py  pyproject.toml  train.py
.github/workflows/: ci.yml
app/: gradio_app.py
configs/: train_classifier.yaml  train_gpt.yaml
configs/data/: imdb.yaml  tinyshakespeare.yaml
configs/model/: classifier.yaml  gpt_small.yaml
configs/train/: clf.yaml  ddp_lm.yaml  lm.yaml
docs/: ABLATIONS.md  BENCHMARKS.md  BENCHMARKS_TRAIN_STEP.md  INFERENCE_BENCHMARKS.md  KERNELS.md  MODEL_CARD_CLASSIFIER.md  MODEL_CARD_GPT.md  PORTFOLIO_PIPELINE.md  ROBOTICS_SEQUENCE.md  SYSTEMS.md
docs/assets/onnx/: classifier.onnx  gpt.onnx
scripts/: ablate.py  bench_inference.py  bench_kernels.py  benchmark.py  build_trt_engine.py  cuda_smoke.py  evaluate.py  export_onnx.py  generate.py  portfolio_pipeline.sh  torch_profiler.py  train_classifier.py  train_gpt.py  train_robotics_sequence.py  viz_attention.py
src/transformer/: __init__.py
src/transformer/data/: __init__.py  imdb.py  robotics.py  tinyshakespeare.py  tokenizers.py
src/transformer/kernels/: __init__.py  rmsnorm_triton.py
src/transformer/models/: __init__.py  attention.py  classifier.py  gpt.py  init_weights.py  layers.py  norm.py  positional.py
src/transformer/training/: __init__.py  callbacks.py  metrics.py  scheduler.py  trainer.py
src/transformer/utils/: __init__.py  artifacts.py  flops.py  logging_utils.py  seed.py
tests/: test_attention.py  test_determinism.py  test_equivalence.py  test_evaluate_script.py  test_gqa.py  test_gradcheck.py  test_kv_cache.py  test_onnx_export.py  test_overfit.py  test_positional.py  test_robotics_sequence.py  test_shapes.py  test_tokenizer.py  test_triton_rmsnorm.py  test_vocab_artifacts.py
