[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
version = "0.2.0"
description = "Transformer encoder + GPT decoder from scratch in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "h0rvex" }]
dependencies = [
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
    "onnxruntime>=1.16.0",
    "fvcore>=0.1.5",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-requests",
    "types-tqdm",
]
app = ["gradio>=4.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "scripts", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W", "B"]
ignore = ["N818", "N812"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["transformer"]

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "tokenizers.*",
    "wandb.*",
    "fvcore.*",
    "onnx.*",
    "onnxscript.*",
    "onnxruntime.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "gradio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
markers = [
    "gpu: needs CUDA (skipped in CI)",
]

[tool.coverage.run]
source = ["src/transformer"]
